DDF-2963 Fix css issue with input spacing

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/value/value.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/value/value.less
@@ -29,7 +29,7 @@
 }
 
 @{customElementNamespace}value-collection {
-  @{customElementNamespace}value {
+  @{customElementNamespace}value + @{customElementNamespace}value {
     margin-top: @minimumSpacing;
   }
 }
